@@ -73,6 +73,7 @@ setup(name='zope.app.authentication',
                         'zope.i18nmessageid',
                         'zope.interface',
                         'zope.location',
+                        'zope.password',
                         'zope.publisher',
                         'zope.schema',
                         'zope.security',
