@@ -25,6 +25,8 @@ from zope.app.security.interfaces import ILogout
 from zope.container.constraints import contains, containers
 from zope.container.interfaces import IContainer
 
+# BBB: the password managers were moved into zope.password package.
+from zope.password.interfaces import IPasswordManager
 
 class IPlugin(zope.interface.Interface):
     """A plugin for a pluggable authentication component."""
@@ -146,14 +148,6 @@ class IAuthenticatorPlugin(IPlugin):
         If the plugin cannot find information for the id, returns None.
         """
 
-class IPasswordManager(zope.interface.Interface):
-    """Password manager."""
-
-    def encodePassword(password):
-        """Return encoded data for the password."""
-
-    def checkPassword(storedPassword, password):
-        """Return whether the password coincide with the storedPassword."""
 
 class IPrincipalInfo(zope.interface.Interface):
     """Minimal information about a principal."""
