@@ -1,47 +1,11 @@
-<configure
-    xmlns="http://namespaces.zope.org/zope"
-    i18n_domain="zope"
-    >
+<configure xmlns="http://namespaces.zope.org/zope">
+
+  <include package="zope.password" />
 
   <utility
       component=".password.PasswordManagerNamesVocabulary"
+      provides="zope.schema.interfaces.IVocabularyFactory"
       name="Password Manager Names"
-      />
-
-  <class class=".password.PlainTextPasswordManager">
-    <allow interface=".interfaces.IPasswordManager" />
-  </class>
-
-  <utility
-      name="Plain Text"
-      provides=".interfaces.IPasswordManager"
-      factory=".password.PlainTextPasswordManager"
-      />
-
-  <class class=".password.MD5PasswordManager">
-    <allow interface=".interfaces.IPasswordManager" />
-  </class>
-
-  <utility
-      name="MD5"
-      provides=".interfaces.IPasswordManager"
-      factory=".password.MD5PasswordManager"
-      />
-
-  <class class=".password.SHA1PasswordManager">
-    <allow interface=".interfaces.IPasswordManager" />
-  </class>
-
-  <utility
-      name="SHA1"
-      provides=".interfaces.IPasswordManager"
-      factory=".password.SHA1PasswordManager"
-      />
-
-  <utility
-      name="SSHA"
-      provides=".interfaces.IPasswordManager"
-      factory=".password.SSHAPasswordManager"
       />
 
 </configure>
