@@ -5,7 +5,8 @@ Changes
 3.5.0a3 (unreleased)
 --------------------
 
-- ...
+* Split password manager functionality off to the new ``zope.password``
+  package. Backward-compatibility imports are left in place.
 
 3.5.0a2 (2009-02-01)
 --------------------
